[package]
name = "flowery_soundboard"
version = "0.1.0"
edition = "2024"

[lints.clippy]
match_wildcard_for_single_variants = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
random = "0.14.1"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
